<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fun Tweet</string>
    <string name="login_label">Connect with Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="tweet">tweet</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="reply">Reply</string>
    <string name="profile">Profile</string>
    <string name="highlights">Highlights</string>
    <string name="lists">Lists</string>
    <string name="connect">Connect</string>
    <string name="settings_and_privacy">Settings and Privacy</string>
    <string name="help_center">Help Center</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>


</resources>